# oak

./: RVT_HOWTO.txt  cloudbuild.yaml
oak_abi/: Cargo.toml
oak_abi/src/label/: tests.rs
oak_io/: Cargo.toml
oak_io/src/: handle.rs  lib.rs  receiver.rs
oak_runtime/: Cargo.toml
oak_runtime/src/: tests.rs
oak_sign/: Cargo.toml
oak_utils/: Cargo.toml
scripts/: docker_run
stub-ring/: Cargo.toml
stub-ring/src/: lib.rs
stub-sha2/: Cargo.toml
stub-sha2/src/: lib.rs
