[workspace]

[package]
name = "oak_abi"
version = "0.1.0"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
prost = { path = "../third_party/prost" }
prost-types = { path = "../third_party/prost/prost-types" }
serde = { version = "*", features = ["derive"] }
proptest = "0.10.1"
proptest-derive = "0.2.0"

[build-dependencies]
oak_utils = { path = "../oak_utils" }
prost-build = { path = "../third_party/prost/prost-build" }

[patch.crates-io]
prost = { path = "../third_party/prost" }
prost-build = { path = "../third_party/prost/prost-build" }
prost-derive = { path = "../third_party/prost/prost-derive" }
prost-types = { path = "../third_party/prost/prost-types" }
