[workspace]

[package]
name = "oak_sign"
version = "0.1.0"
authors = ["Ivan Petrov <ivanpetrov@google.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
anyhow = "*"
env_logger = "*"
hex = "*"
log = "*"
pem = "*"
rand = "*"
# ring = "*"
structopt = "*"
# sha2 = "*"


[target.'cfg(verify)'.dependencies]
propverify = { path="../../rvt/propverify" }
sha2 = { path="../stub-sha2", package = "stub-sha2" }
ring = { path="../stub-ring", package = "stub-ring" }

[target.'cfg(not(verify))'.dependencies]
proptest = { version = "*" }
# sha2 = "*"
# ring = "*"

[features]
verifier-klee = ["propverify/verifier-klee"]
